# gitfindr

./: README.md  package-lock.json
backend/: .gitignore  Makefile  alembic.ini  docker-compose.yaml  load.py  loadData.py  main.py  pyproject.toml  redisClone.py  settings.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c4328e9b864_create_initial_tables.py  5d51f5c58b7f_create_initial_tables.py  8f2c33eb4bcc_final_tables.py  e0e2349d109a_add_inverted_index_tables.py
backend/indexer/: .gitignore  bm25.go  cacher.go  data.txt  db.go  generalStructs.go  getRepoData.go  ghAPI.go  go.mod  go.sum  indexer.go  main.go  processWords.go  server.go  testDB.db
backend/pyProcessor/: .gitignore  Dockerfile  main.py  processFile.py
backend/redisCloner/: .env  redisCLone.py  redisToDATA.py
backend/redisCloner/rcloner/: pyvenv.cfg
backend/src/api/: entity.py  server.py
backend/src/internal/: logger.py  session.py
backend/src/internal/crud/: embedding.py  invertedindex.py  repo.py
backend/src/internal/models/: embedding.py  invertedindex.py  repo.py
backend/src/service/indexing/: index.py
backend/src/service/indexing/lexical/: keywords.py
backend/src/service/indexing/semantic/: embedding.py
backend/src/service/indexing/util/: util.py
backend/src/service/query/: query.py
backend/src/service/storage/: populate.py
backend/src/storage/: populate.py
crawler/: main.go
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: About.jsx  App.css  App.jsx  form.css  form.jsx  getResults.js  index.css  registerModal.jsx  search.jsx  searchResults.jsx
indexer/: main.py
