[project]
name = "gitfindr"
version = "0.1.0"
description = "A hybrid search engine for GitHub and repo-based platforms using custom BM25 and README analysis."
authors = [{ name = "Arnav", email = "its.arnav.sh@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi>=0.115.12",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "uuid>=1.30",
    "uvicorn>=0.34.3",
]
